add metrics route in swagger
